<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_DiscreteValveDefaultParameters" Id="{91238d3e-c396-45dc-abc4-16aa2710a625}">
    <Declaration><![CDATA[TYPE ST_DiscreteValveDefaultParameters :
STRUCT
	nFeedback : E_DiscreteValveFeedbackMode; //valve feedback mode as integer
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>