<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_DiscreteValveState" Id="{05129783-53bd-4c22-88f0-65135c0932e7}">
    <Declaration><![CDATA[TYPE ST_DiscreteValveState :
STRUCT
	nPosition : E_DiscreteValvePosition; //valve feedback mode as integer
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>